--- a/style.css
+++ b/style.css
@@ -35,10 +35,11 @@ html {
 
 #openBtn{
     display: none;
-    padding: 1px 9px;
-    background-color: rgb(6, 6, 31);
-    color: white;
-    font-size: 19px;
+    padding: 0px 9px;
+    border: none;
+    background-color: transparent;
+    color: black;
+    font-size: 28px;
 }
 
 body{
@@ -65,10 +66,6 @@ body{
     flex-direction: row;
 }
 
-/* .navbar-icon span{
-    cursor: pointer;
-    margin: 0 15px;
-} */
 .navbar-icon .fa-bell{
     color: rgba(10, 10, 10, 0.842);
     font-size: 20px;
@@ -89,11 +86,22 @@ body{
     margin:0 22px;
 }
 
-
-
 .nav-logo-container a{
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    font-family: ubuntu;
+    letter-spacing:2px;
+    color: navy;
+    font-weight: 900;
+    text-decoration: none;
+    font-size: 23px;
+    align-items: center;
+}
+
+.nav-logo-container-sidebar a{
+    display: flex;
+    display: none;
+    justify-content: start;
     font-family: ubuntu;
     letter-spacing:2px;
     color: navy;
@@ -107,13 +115,18 @@ body{
     color: navy;
 }
 
+.nav-logo-container-sidebar a:hover{
+    color: navy;
+}
+
 .user-logout{
     position: relative;
-    transition: all .1s;
+    
 }
 
 .user-logout .hidden-logout{
     visibility:hidden;
+    transition: all .2s 1s;
     display: block;
     position: absolute;
     font-family: 'Poppins';
@@ -136,6 +149,14 @@ body{
 
 .nav-logo-container .nav-logo{
     width: 70px;
+    margin-right:-17px;
+    height: auto;
+    object-fit: cover;
+    cursor: pointer;
+}
+.nav-logo-container-sidebar .nav-logo{
+    width: 70px;
+    margin-right:-17px;
     height: auto;
     object-fit: cover;
     cursor: pointer;
@@ -154,9 +175,10 @@ body{
     background-color: white;
     height:100vh;
     overflow-y: auto;
-    position: sticky;
+    position:sticky;
     top: 0;
-    padding:  1rem;
+    transition:transform 0.3s ease;
+    padding:1rem;
 }
 
 #dashboard-list-cont{
@@ -975,7 +997,6 @@ body{
     padding:  0;
     margin: 15px auto;
 }
-
 
 .bg-mainbar{
     background-image:linear-gradient(to bottom right,rgba(255, 0, 0, 0.65), blue), url(images/bg-img.jpg);
